[package]
name = "qwen3-tts-server"
version = "0.1.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["qwen3-tts/cuda"]
flash-attn = ["qwen3-tts/flash-attn"]

[dependencies]
qwen3-tts = { workspace = true, features = ["hub"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
base64 = "0.22"
hound = "3.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tokio-stream = "0.1"
